7904149: jtreg fails when test with @enablePreview is executed with driver mode